# wstinput

./: .gitmodules  CMakeLists.txt  flake.nix  wstinput-config.cmake.in
include/wstinput/: controller.hpp  controller_description.hpp  fwd.hpp  input_bindings.hpp  input_event.hpp  input_manager.hpp  wiimote.hpp
src/: controller.cpp  controller_description.cpp  input_bindings.cpp  input_manager.cpp  wiimote.cpp
src/input/: input_manager.cpp  input_manager.hpp
